syntax = "proto3";

package chat;

option java_multiple_files = true;
option java_package = "com.songko.grpc";

// Service for bidirectional streaming for chat support
service Chat {
  rpc StartChat (stream ChatMessage) returns (stream ChatResponse) {}
}

// Message representing a client's message in a chat system
message ChatMessage {
  string sender = 1;
  string message = 2;
}

// Message representing a server's response in a chat system
message ChatResponse {
  string sender = 1;
  string message = 2;
}

